# AeroDynControlRig

./: .gitmodules  ARCHITECTURE.md  CMakeLists.txt  DOCUMENTATION_SUMMARY.md  Doxyfile  GITHUB_PAGES_SETUP.md  KEYBOARD_CONTROLS.md  PIPELINE.md  PROGRESS_2025-10-25.md  README.md  ROADMAP_2025-10-25.md  TODO.md  UI_TODO.md  imgui.ini  script.sh  view_docs.sh
.github/workflows/: doxygen.yml
docs/: DOCUMENTATION_UPDATE.md  NAVIGATION.md  REACT_TO_VANILLA_CLEANUP_2025-10-25.md  README.md  architecture.dox  architecture.md  complete_picture.md  custom.css  display_fundamentals.md  gpu_pipeline.md  groups.dox  hardware_pipeline.md  imgui_tutorial.md  mainpage.md  opengl_imgui_integration.md  opengl_tutorial.md  pixel_truth.md  web_analogy.md
docs/diagrams/: data_flow.dot  opengl_pipeline.dot  system_architecture.dot
docs/doxygen/html/: DOCUMENTATION__UPDATE_8md.html  NAVIGATION_8md.html  REACT__TO__VANILLA__CLEANUP__2025-10-25_8md.html  README_8md.html  annotated.html  annotated_dup.js  application_8cpp.html  application_8cpp.js  application_8cpp__incl.map  application_8cpp__incl.md5  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  architecture.html  architecture_8dox.html  architecture_8md.html  attitude__utils_8c.html  attitude__utils_8c.js  attitude__utils_8c__incl.map  attitude__utils_8c__incl.md5  attitude__utils_8c_a32bc85d5e25e4374b31308af4f530377_icgraph.map  attitude__utils_8c_a32bc85d5e25e4374b31308af4f530377_icgraph.md5  attitude__utils_8c_af35bb275d1a55f131c558f847308bcfc_icgraph.map  attitude__utils_8c_af35bb275d1a55f131c558f847308bcfc_icgraph.md5  attitude__utils_8h.html  attitude__utils_8h.js  attitude__utils_8h__dep__incl.map  attitude__utils_8h__dep__incl.md5  attitude__utils_8h_a32bc85d5e25e4374b31308af4f530377_icgraph.map  attitude__utils_8h_a32bc85d5e25e4374b31308af4f530377_icgraph.md5  attitude__utils_8h_af35bb275d1a55f131c558f847308bcfc_icgraph.md5  attitude__utils_8h_source.html  axis__renderer_8cpp.html  axis__renderer_8cpp__incl.map  axis__renderer_8cpp__incl.md5  axis__renderer_8h.html  axis__renderer_8h__dep__incl.map  (+899 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  (+94 more)
shaders/: background_fragment.glsl  fragment.glsl  fragment3D.glsl  vertex.glsl  vertex3D.glsl
src/: .application.cpp.swp  .main.cpp.swp  application.cpp  application.h  axis_renderer.cpp  axis_renderer.h  camera.cpp  camera.h  main.cpp  renderer.cpp  renderer.h  transform.h
src/app/: application.cpp  application.h  main.cpp
src/core/: module.h  ring_buffer.h  simulation_state.h  transform.h
src/gui/: panel.h  panel_manager.cpp  panel_manager.h  style.cpp  style.h
src/gui/panels/: control_panel.cpp  control_panel.h  dynamics_panel.cpp  dynamics_panel.h  estimator_panel.cpp  estimator_panel.h  power_panel.cpp  power_panel.h  rotor_analysis_panel.cpp  rotor_analysis_panel.h  rotor_panel.cpp  rotor_panel.h  sensor_panel.cpp  sensor_panel.h  telemetry_panel.cpp  telemetry_panel.h
src/gui/widgets/: card.cpp  card.h  chip.cpp  chip.h  plot_widget.h
src/modules/: complementary_estimator.cpp  complementary_estimator.h  first_order_dynamics.cpp  first_order_dynamics.h  quadcopter_dynamics.cpp  quadcopter_dynamics.h  quaternion_demo.cpp  quaternion_demo.h  rotor_telemetry.cpp  rotor_telemetry.h  sensor_simulator.cpp  sensor_simulator.h
src/render/: axis_renderer.cpp  axis_renderer.h  camera.cpp  camera.h  renderer.cpp  renderer.h
vision/seasonal_decor_catalog/stitch_seasonal_decor_catalog/antsnad:_data_source_integrations/: code.html
vision/state_estimation_view/1/stitch_state_estimation_view/rotor_dynamics_detail/: code.html
vision/state_estimation_view/2/stitch_state_estimation_view/state_estimation_view/: code.html
vision/state_estimation_view/3/stitch_state_estimation_view/control_system_interface/: code.html
vision/state_estimation_view/4/stitch_state_estimation_view/ins_data_stream/: code.html
vision/state_estimation_view/stitch_state_estimation_view/main_dashboard/: code.html
